# parslers

./: .gitignore  Cargo.toml  README.md  bench.txt
parslers/: Cargo.toml  README.md
parslers-benchmark/: Cargo.toml  LostKng.b  build.rs
parslers-benchmark/benches/: branflakes.rs  json.rs
parslers-benchmark/src/: combine.rs  lib.rs  nom.rs  parslers.rs  test.rs
parslers-benchmark/src/tests/invalid/semanticErr/IO/: readTypeErr.wacc
parslers-benchmark/src/tests/invalid/semanticErr/exit/: badCharExit.wacc  exitNonInt.wacc  globalReturn.wacc
parslers-benchmark/src/tests/invalid/semanticErr/expressions/: boolOpTypeErr.wacc  exprTypeErr.wacc  intOpTypeErr.wacc  lessPairExpr.wacc  mixedOpTypeErr.wacc  moreArrExpr.wacc  stringElemErr.wacc
parslers-benchmark/src/tests/invalid/semanticErr/function/: funcVarAccess.wacc  functionAssign.wacc  functionBadArgUse.wacc  functionBadCall.wacc  functionBadParam.wacc  functionBadReturn.wacc  functionOverArgs.wacc  functionRedefine.wacc  functionSwapArgs.wacc  functionUnderArgs.wacc
parslers-benchmark/src/tests/invalid/semanticErr/if/: ifIntCondition.wacc
parslers-benchmark/src/tests/invalid/semanticErr/multiple/: funcMess.wacc  ifAndWhileErrs.wacc  messyExpr.wacc  multiCaseSensitivity.wacc  multiTypeErrs.wacc
parslers-benchmark/src/tests/invalid/semanticErr/pairs/: freeNonPair.wacc  fstNull.wacc  sndNull.wacc
parslers-benchmark/src/tests/invalid/semanticErr/pairsExtended/: invalidNewPairAssignment.wacc  invalidPairAssignment.wacc
parslers-benchmark/src/tests/invalid/semanticErr/print/: printTypeErr01.wacc
parslers-benchmark/src/tests/invalid/semanticErr/read/: readTypeErr01.wacc
parslers-benchmark/src/tests/invalid/semanticErr/scope/: badScopeRedefine.wacc
parslers-benchmark/src/tests/invalid/semanticErr/variables/: basicTypeErr01.wacc  basicTypeErr02.wacc  basicTypeErr03.wacc  basicTypeErr04.wacc  basicTypeErr05.wacc  (+12 more)
parslers-benchmark/src/tests/valid/IO/: IOLoop.wacc  IOSequence.wacc
parslers-benchmark/src/tests/valid/advanced/: binarySortTree.wacc  hashTable.wacc  ticTacToe.wacc
parslers-benchmark/src/tests/valid/array/: array.wacc  arrayBasic.wacc  arrayEmpty.wacc  arrayLength.wacc  arrayLookup.wacc  arrayNested.wacc  arrayPrint.wacc  arraySimple.wacc  modifyString.wacc  printRef.wacc
parslers-benchmark/src/tests/valid/expressions/: andExpr.wacc  andOverOrExpr.wacc  boolCalc.wacc  boolExpr1.wacc  charComparisonExpr.wacc  divExpr.wacc  equalsExpr.wacc  equalsOverAnd.wacc  equalsOverBool.wacc  equalsOverOr.wacc  greaterEqExpr.wacc  greaterExpr.wacc  intCalc.wacc  intExpr1.wacc  lessCharExpr.wacc  lessEqExpr.wacc  lessExpr.wacc  longExpr.wacc  longExpr2.wacc  longExpr3.wacc  longSplitExpr.wacc  longSplitExpr2.wacc  minusExpr.wacc  minusMinusExpr.wacc  minusNoWhitespaceExpr.wacc  minusPlusExpr.wacc  modExpr.wacc  multExpr.wacc  multNoWhitespaceExpr.wacc  negBothDiv.wacc  negBothMod.wacc  negDividendDiv.wacc  negDividendMod.wacc  negDivisorDiv.wacc  negDivisorMod.wacc  negExpr.wacc  notExpr.wacc  notequalsExpr.wacc  orExpr.wacc  ordAndchrExpr.wacc  (+6 more)
parslers-benchmark/src/tests/valid/if/: if1.wacc  if2.wacc  if3.wacc  if4.wacc  if5.wacc  if6.wacc  ifBasic.wacc  ifFalse.wacc  ifTrue.wacc  whitespace.wacc
parslers-benchmark/src/tests/valid/pairs/: checkRefPair.wacc  createPair.wacc  createPair02.wacc  createPair03.wacc  createRefPair.wacc  free.wacc  linkedList.wacc  nestedPair.wacc  null.wacc  printNull.wacc  printNullPair.wacc  printPair.wacc  printPairOfNulls.wacc  readPair.wacc  writeFst.wacc  writeSnd.wacc
parslers-benchmark/src/tests/valid/pairsExtended/: basicNested.wacc  deeplyNested.wacc
parslers-benchmark/src/tests/valid/scope/: ifNested1.wacc  ifNested2.wacc  indentationNotImportant.wacc  intsAndKeywords.wacc  printAllTypes.wacc  scope.wacc  scopeBasic.wacc  scopeIfRedefine.wacc  scopeRedefine.wacc  scopeSimpleRedefine.wacc  scopeVars.wacc  scopeWhileNested.wacc  scopeWhileRedefine.wacc
parslers-benchmark/src/tests/valid/sequence/: basicSeq.wacc  basicSeq2.wacc  boolAssignment.wacc  charAssignment.wacc  exitSimple.wacc  intAssignment.wacc  intLeadingZeros.wacc  stringAssignment.wacc
parslers-benchmark/src/tests/valid/variables/: _VarNames.wacc  boolDeclaration.wacc  boolDeclaration2.wacc  capCharDeclaration.wacc  charDeclaration.wacc  charDeclaration2.wacc  emptyStringDeclaration.wacc  intDeclaration.wacc  longVarNames.wacc  manyVariables.wacc  negIntDeclaration.wacc  puncCharDeclaration.wacc  stringDeclaration.wacc  zeroIntDeclaration.wacc
parslers-benchmark/src/tests/valid/voidCalls/: voidBasic.wacc  voidCallInFunction.wacc
parslers-benchmark/src/tests/valid/while/: fibonacciFullIt.wacc  fibonacciIterative.wacc  loopCharCondition.wacc  loopIntCondition.wacc  max.wacc  min.wacc  rmStyleAdd.wacc  rmStyleAddIO.wacc  whileBasic.wacc  whileBoolFlip.wacc  whileCount.wacc  whileFalse.wacc
parslers-example/: Cargo.toml  build.rs
parslers-example/src/: main.rs
parslers-macro/: Cargo.toml
parslers-macro/src/: lib.rs
parslers/src/: ast.rs  auxiliary.rs  builder.rs  code_gen.rs  compiler.rs  lib.rs  parser.rs  parsler.rs  reflect.rs
(+147 files in other folders)
