[package]
name = "parslers-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
parslers = { path = "../parslers" }
parslers-macro = { path = "../parslers-macro" }
parslers-json = { path = "../parslers-json" }

[dependencies]
parslers-json = { path = "../parslers-json" }