[package]
name = "parslers"
version = "0.1.1"
edition = "2021"
categories = ["parsing", "text-processing"]
description = "A Staged Selective Parser Combinator Library for the Rust Programming Language"
keywords = ["parser", "parsing", "parser-combinators", "combinator"]
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Jordan Hall <Jordanhall123@googlemail.com>"]
repository = "https://github.com/JordanLloydHall/parslers"
rust-version = "1.70.0"

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = { version = "2.0.29", features = ["extra-traits", "full"] }
either = {version = "1.6.1"}
parslers-macro = { path = "../parslers-macro", version = "0.1.0" }